--- a/app/src/main/res/layout/button_w1.xml
+++ b/app/src/main/res/layout/button_w1.xml
@@ -1,2 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Assignment #2: Add Button view and follow the steps in the document -->
+<?xml version="1.0" encoding="utf-8"?><!-- Assignment #2: Add Button view and follow the steps in the document -->
+<Button xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="This is my first button"
+    android:drawableLeft="@drawable/ic_battery_heart_outline_black_48dp"
+    />
